--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Hello World</H1>
+    <H1>Hello World (Button)</H1>
     <h2>Hello World 2</h2>
     <h3>Hello World 3</h3>
     <p>Footer in Feature1</p>
