add below feature

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>Hello World 2</h2>
     <h3>Hello World 3</h3>
     <p>Footer in Feature1</p>
+    <p>This is Freature1 and yes it is</p>
 </body>
 </html>
